Prevent unwanted horizontal overflow

--- a/assets-src/styles/sass/40-layout-helpers/_cluster.scss
+++ b/assets-src/styles/sass/40-layout-helpers/_cluster.scss
@@ -13,9 +13,9 @@
 Suppress horizontal scrolling caused by the negative margin
 in some circumstances.
  */
-//.l-cluster {
-//	overflow: hidden;
-//}
+.l-cluster {
+	overflow: hidden;
+}
 
 
 /**
