--- a/assets-src/styles/sass/40-layout-helpers/_sidebar.scss
+++ b/assets-src/styles/sass/40-layout-helpers/_sidebar.scss
@@ -21,9 +21,9 @@
 Suppress horizontal scrolling caused by the negative margin
 in some circumstances.
  */
-//.l-sidebar {
-//	overflow: hidden;
-//}
+.l-sidebar {
+	overflow: hidden;
+}
 
 
 /**
